Updated many 18sp font sizes to now be dynamic (they'll drop down to 16sp if DPI is HDPI or lower)

--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical"
+        android:theme="@style/textInputLayoutStyle"
         tools:context="com.dignityhealth.myhome.features.login.LoginActivity">
 
         <include
@@ -71,7 +72,6 @@
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/email"
-                style="@style/tradeGothicLTStdLight_18"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_email"
@@ -96,7 +96,6 @@
             android:layout_marginTop="24dp"
             android:onClick="@{handlers::onClickEvent}"
             android:text="@string/action_reset_password"
-            android:textSize="18sp"
             android:textStyle="bold" />
 
         <!-- Login progress -->
