--- a/MyHome/app/src/main/res/layout/appointment_item_empty.xml
+++ b/MyHome/app/src/main/res/layout/appointment_item_empty.xml
@@ -6,12 +6,12 @@
     android:minHeight="48dp">
 
     <TextView
+        style="@style/tradeGothicLTStd_Dynamic18"
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:text="@string/no_appointments"
-        android:textSize="18sp" />
+        android:text="@string/no_appointments" />
 
 </RelativeLayout>
