--- a/MyHome/app/src/main/res/layout/appointment_item.xml
+++ b/MyHome/app/src/main/res/layout/appointment_item.xml
@@ -25,7 +25,7 @@
 
     <TextView
         android:id="@+id/time"
-        style="@style/tradeGothicLTStdLight_14"
+        style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -33,19 +33,17 @@
         android:layout_marginLeft="10dp"
         android:gravity="center"
         android:maxWidth="285dp"
-        android:text="2:45 PM"
-        android:textSize="18sp" />
+        android:text="2:45 PM" />
 
     <TextView
         android:id="@+id/facility"
-        style="@style/tradeGothicLTStdLight_14"
+        style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/date"
         android:layout_marginLeft="12dp"
         android:maxWidth="285dp"
         android:text="Sequoia Hospital"
-        android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
