--- a/MyHome/app/src/main/res/layout/provider_details_location_item_empty.xml
+++ b/MyHome/app/src/main/res/layout/provider_details_location_item_empty.xml
@@ -7,11 +7,11 @@
 
     <TextView
         android:id="@+id/date"
+        style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:text="@string/no_education_found"
-        android:textSize="18sp" />
+        android:text="@string/no_education_found" />
 
 </RelativeLayout>
