--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
     <style name="customTabLayout" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/scalable_18</item>
         <item name="tabSelectedTextColor">@color/accent</item>
     </style>
 
@@ -57,7 +57,7 @@
         <item name="android:textColor">@color/grey</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/scalable_18</item>
         <item name="android:layout_height">44dp</item>
     </style>
 
@@ -66,7 +66,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textAppearance">@style/tradeGothicLTStdBold_18</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/scalable_18</item>
         <item name="android:layout_height">44dp</item>
     </style>
 
@@ -74,7 +74,7 @@
         <item name="android:background">@drawable/button_primary</item>
         <item name="android:textColor">@color/primary_text</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/scalable_18</item>
         <item name="android:layout_height">44dp</item>
     </style>
 
@@ -82,7 +82,7 @@
         <item name="android:background">@drawable/selectable_button</item>
         <item name="android:textColor">@drawable/selectable_button_text</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/scalable_18</item>
         <item name="android:layout_height">44dp</item>
     </style>
 
@@ -91,7 +91,7 @@
         <item name="android:textColor">@color/db_white_two</item>
         <item name="android:textAppearance">@style/tradeGothicLTStdBd2_18</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/scalable_18</item>
         <item name="android:layout_height">45dp</item>
     </style>
 
@@ -151,6 +151,10 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="tradeGothicLTStd_Dynamic18" parent="tradeGothicLTStd">
+        <item name="android:textSize">@dimen/scalable_18</item>
+    </style>
+
     <style name="tradeGothicLTStdBd2_20_deepAqua" parent="tradeGothicLTStdBd2">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/db_deep_aqua</item>
@@ -177,10 +181,6 @@
 
     <style name="tradeGothicLTStdLight_18" parent="tradeGothicLTStdLight">
         <item name="android:textSize">18sp</item>
-    </style>
-
-    <style name="tradeGothicLTStdLight_13" parent="tradeGothicLTStdLight">
-        <item name="android:textSize">13sp</item>
     </style>
 
     <style name="tradeGothicLTStdLight_14" parent="tradeGothicLTStdLight">
