--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -16,7 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
-            android:orientation="vertical"
             android:theme="@style/textInputLayoutStyle"
             tools:context="com.dignityhealth.myhome.features.login.LoginActivity">
 
@@ -24,10 +23,8 @@
                 android:id="@+id/email_login_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/login_logo"
                 android:layout_marginTop="30dp"
-                android:focusableInTouchMode="true"
-                android:orientation="vertical">
+                android:focusableInTouchMode="true">
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/firstNameLayout"
