--- a/MyHome/app/src/main/res/layout/fragment_list_dialog.xml
+++ b/MyHome/app/src/main/res/layout/fragment_list_dialog.xml
@@ -43,7 +43,9 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:ellipsize="end"
                 android:gravity="right|center_vertical"
+                android:maxLength="15"
                 android:onClick="@{handlers::onClickEvent}"
                 android:padding="8dp"
                 android:text="@string/find_care"
