--- a/MyHome/app/src/main/res/layout/book_confirmation.xml
+++ b/MyHome/app/src/main/res/layout/book_confirmation.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingLeft="32dp"
@@ -18,7 +19,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="Wednesday, May 18th" />
+            android:text="Wednesday, May 18th"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/time"
@@ -27,7 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="10:30am" />
+            android:text="10:30am"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/address"
@@ -37,7 +40,8 @@
             android:layout_gravity="center"
             android:layout_marginTop="14dp"
             android:gravity="center"
-            android:text="90 Madison St, Ste 504\nDenver, CO 80206" />
+            android:text="90 Madison St, Ste 504\nDenver, CO 80206"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/reason"
@@ -45,7 +49,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="42dp"
-            android:text="I've been having back pain for the past week and wanted to get it checked out by a doctor." />
+            android:text="I've been having back pain for the past week and wanted to get it checked out by a doctor."
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/book_confirmed"
