--- a/MyHome/app/src/main/res/layout/developer.xml
+++ b/MyHome/app/src/main/res/layout/developer.xml
@@ -7,8 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
         android:padding="12dp">
 
         <TextView
