--- a/MyHome/app/src/main/res/layout/fragment_login.xml
+++ b/MyHome/app/src/main/res/layout/fragment_login.xml
@@ -142,7 +142,7 @@
                 <WebView
                     android:id="@+id/web_view_redirect"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:visibility="gone" />
 
                 <!-- Login progress -->
