--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -85,8 +85,6 @@
                     style="@style/tradeGothicLTStdLight_16"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
                     android:layout_marginBottom="14dp"
                     android:layout_marginEnd="12dp"
                     android:layout_marginStart="12dp"
@@ -221,7 +219,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:lineSpacingExtra="10sp"
-                        android:text="Find Care"
+                        android:text="@string/find_care"
                         android:textColor="@color/db_gunmetal"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -237,7 +235,7 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="13dp"
                     android:ellipsize="end"
-                    android:hint="Seach for a doctor, speciality or condition"
+                    android:hint="@string/dashboard_search_hint"
                     android:imeOptions="actionSearch"
                     android:inputType="text"
                     android:lineSpacingExtra="5sp"
@@ -268,7 +266,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:lineSpacingExtra="10sp"
-                        android:text="Did you know?"
+                        android:text="@string/did_you_know"
                         android:textColor="@color/db_gunmetal"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -295,7 +293,8 @@
                     android:lineSpacingExtra="8sp"
                     android:text="The Power of Time Off: Why Vacations Are Essential."
                     android:textColor="@color/db_gunmetal"
-                    android:textSize="22sp" />
+                    android:textSize="22sp"
+                    tools:ignore="HardcodedText" />
 
                 <View
                     style="@style/dbDivider"
@@ -321,7 +320,8 @@
                     android:lineSpacingExtra="8sp"
                     android:text="A Little Bit of Color: Don't Let a Sunburn Get You Down This Summer."
                     android:textColor="@color/db_gunmetal"
-                    android:textSize="22sp" />
+                    android:textSize="22sp"
+                    tools:ignore="HardcodedText" />
             </LinearLayout>
 
 
