--- a/MyHome/app/src/main/res/layout/profile_view.xml
+++ b/MyHome/app/src/main/res/layout/profile_view.xml
@@ -11,7 +11,7 @@
         <LinearLayout
             android:id="@+id/viewProfile"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/profile_firstname_indent"
             android:layout_marginLeft="@dimen/profile_firstname_indent"
             android:layout_marginRight="@dimen/profile_firstname_indent"
