--- a/MyHome/app/src/main/res/layout/provider_details_location_item.xml
+++ b/MyHome/app/src/main/res/layout/provider_details_location_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/location_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,7 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dp"
         android:layout_marginTop="6dp"
-        android:text="90 Madison St \nSte 504 \nDenver, CO 80206" />
+        android:text="90 Madison St \nSte 504 \nDenver, CO 80206"
+        tools:ignore="HardcodedText" />
 
     <ImageView
         android:id="@+id/pin_icon"
