--- a/MyHome/app/src/main/res/layout/book_dialog_insurance.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_insurance.xml
@@ -8,30 +8,26 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingLeft="18dp"
         android:paddingRight="18dp"
         android:paddingTop="18dp">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/provider_layout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/provider_plan_label"
+            style="@style/tradeGothicLTStdLight_14"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:errorEnabled="true"
-            app:errorTextAppearance="@style/error_appearance"
-            app:hintTextAppearance="@style/hint_appearance">
+            android:layout_marginLeft="4dp"
+            android:text="@string/provider_plan"
+            android:textColor="@color/text_darker" />
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/provider"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:hint="@string/insurance_provider"
-                android:inputType="text"
-                android:maxLines="1" />
-
-        </android.support.design.widget.TextInputLayout>
+        <Spinner
+            android:id="@+id/provider_plan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="-2dp" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/id_layout"
@@ -91,6 +87,14 @@
                 android:maxLines="1" />
 
         </android.support.design.widget.TextInputLayout>
+
+        <ProgressBar
+            android:id="@+id/progress_bar_insurance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:visibility="gone" />
 
     </LinearLayout>
 </ScrollView>
