--- a/MyHome/app/src/main/res/layout/book_select_time.xml
+++ b/MyHome/app/src/main/res/layout/book_select_time.xml
@@ -49,7 +49,7 @@
     <Button
         android:id="@+id/empty_appointments"
         style="@style/selectableButtonStyle"
-        android:layout_width="326dp"
+        android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginTop="12dp"
         android:gravity="center"
@@ -61,7 +61,7 @@
     <Button
         android:id="@+id/call_for_appointment"
         style="@style/selectableButtonStyle"
-        android:layout_width="326dp"
+        android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginTop="12dp"
         android:gravity="center"
