Many 20 point fonts will now scale down to 18 on lower resolution devices devices

--- a/MyHome/app/src/main/res/layout/appointments.xml
+++ b/MyHome/app/src/main/res/layout/appointments.xml
@@ -11,8 +11,7 @@
         android:layout_height="45dp"
         android:layout_gravity="center"
         android:layout_margin="@dimen/profile_label_marginTop"
-        android:text="@string/book_an_appointment"
-        android:textSize="20sp" />
+        android:text="@string/book_an_appointment" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_appointments"
