--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -45,7 +45,7 @@
 
         <TextView
             android:id="@+id/subheader"
-            style="@style/tradeGothicLTStdLight_14"
+            style="@style/tradeGothicLTStd_Dynamic20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/header"
@@ -55,8 +55,7 @@
             android:paddingRight="16dp"
             android:paddingStart="16dp"
             android:text="@string/forgot_password_subheader"
-            android:textColor="@color/text_dark"
-            android:textSize="20sp" />
+            android:textColor="@color/text_dark" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/email_layout"
