--- a/MyHome/app/src/main/res/layout/book_select_person.xml
+++ b/MyHome/app/src/main/res/layout/book_select_person.xml
@@ -8,12 +8,11 @@
     android:paddingRight="18dp">
 
     <TextView
-        style="@style/tradeGothicLTStdLight_14"
+        style="@style/tradeGothicLTStd_Dynamic20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/booking_select_person_header"
-        android:textSize="20sp" />
+        android:text="@string/booking_select_person_header" />
 
     <Button
         android:id="@+id/book_me"
