--- a/MyHome/app/src/main/res/layout/book_select_status.xml
+++ b/MyHome/app/src/main/res/layout/book_select_status.xml
@@ -9,12 +9,11 @@
 
     <TextView
         android:id="@+id/status_header"
-        style="@style/tradeGothicLTStdLight_14"
+        style="@style/tradeGothicLTStd_Dynamic20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/booking_select_status_header"
-        android:textSize="20sp" />
+        android:text="@string/booking_select_status_header" />
 
     <Button
         android:id="@+id/book_new"
@@ -38,14 +37,13 @@
 
     <TextView
         android:id="@+id/no_times_available"
-        style="@style/tradeGothicLTStdLight_14"
+        style="@style/tradeGothicLTStd_Dynamic20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="18dp"
         android:text="@string/no_appointments_new_patients"
-        android:textSize="20sp"
         android:textStyle="bold"
         android:visibility="gone" />
 
